_generated-doc/2.7/config/quarkus-kafka-streams-config-group-ssl-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-kafka-streams-config-group-ssl-config_configuration]]link:#quarkus-kafka-streams-config-group-ssl-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.protocol]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.protocol[quarkus.kafka-streams.ssl.protocol]`

[.description]
--
The SSL protocol used to generate the SSLContext
--|string 
|


a| [[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.provider]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.provider[quarkus.kafka-streams.ssl.provider]`

[.description]
--
The name of the security provider used for SSL connections
--|string 
|


a| [[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.cipher-suites]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.cipher-suites[quarkus.kafka-streams.ssl.cipher-suites]`

[.description]
--
A list of cipher suites
--|string 
|


a| [[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.enabled-protocols]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.enabled-protocols[quarkus.kafka-streams.ssl.enabled-protocols]`

[.description]
--
The list of protocols enabled for SSL connections
--|string 
|


a| [[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.truststore.type]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.truststore.type[quarkus.kafka-streams.ssl.truststore.type]`

[.description]
--
Trust store type
--|string 
|


a| [[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.truststore.location]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.truststore.location[quarkus.kafka-streams.ssl.truststore.location]`

[.description]
--
Trust store location
--|string 
|


a| [[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.truststore.password]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.truststore.password[quarkus.kafka-streams.ssl.truststore.password]`

[.description]
--
Trust store password
--|string 
|


a| [[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.truststore.certificates]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.truststore.certificates[quarkus.kafka-streams.ssl.truststore.certificates]`

[.description]
--
Trust store certificates
--|string 
|


a| [[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.keystore.type]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.keystore.type[quarkus.kafka-streams.ssl.keystore.type]`

[.description]
--
Key store type
--|string 
|


a| [[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.keystore.location]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.keystore.location[quarkus.kafka-streams.ssl.keystore.location]`

[.description]
--
Key store location
--|string 
|


a| [[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.keystore.password]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.keystore.password[quarkus.kafka-streams.ssl.keystore.password]`

[.description]
--
Key store password
--|string 
|


a| [[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.keystore.key]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.keystore.key[quarkus.kafka-streams.ssl.keystore.key]`

[.description]
--
Key store private key
--|string 
|


a| [[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.keystore.certificate-chain]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.keystore.certificate-chain[quarkus.kafka-streams.ssl.keystore.certificate-chain]`

[.description]
--
Key store certificate chain
--|string 
|


a| [[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.key.password]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.key.password[quarkus.kafka-streams.ssl.key.password]`

[.description]
--
Password of the private key in the key store
--|string 
|


a| [[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.keymanager-algorithm]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.keymanager-algorithm[quarkus.kafka-streams.ssl.keymanager-algorithm]`

[.description]
--
The algorithm used by key manager factory for SSL connections
--|string 
|


a| [[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.trustmanager-algorithm]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.trustmanager-algorithm[quarkus.kafka-streams.ssl.trustmanager-algorithm]`

[.description]
--
The algorithm used by trust manager factory for SSL connections
--|string 
|


a| [[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.endpoint-identification-algorithm]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.endpoint-identification-algorithm[quarkus.kafka-streams.ssl.endpoint-identification-algorithm]`

[.description]
--
The endpoint identification algorithm to validate server hostname using server certificate
--|string 
|`https`


a| [[quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.secure-random-implementation]]`link:#quarkus-kafka-streams-config-group-ssl-config_quarkus.kafka-streams.ssl.secure-random-implementation[quarkus.kafka-streams.ssl.secure-random-implementation]`

[.description]
--
The SecureRandom PRNG implementation to use for SSL cryptography operations
--|string 
|

|===